[package]
name = "fnm"
version = "1.35.1"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0"
repository = "https://github.com/Schniz/fnm"
description = "Fast and simple Node.js version manager"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
clap = { version = "4.3.10", features = ["derive", "env"] }
serde_json = "1.0.111"
chrono = { version = "0.4.31", features = ["serde"] }
tar = "0.4.40"
xz2 = "0.1.7"
node-semver = "2.1.0"
dirs = "5.0.1"
colored = "2.0.4"
zip = "0.6.6"
tempfile = "3.6.0"
indoc = "2.0.4"
log = "0.4.20"
env_logger = "0.10.1"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.11.23", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli"], default-features = false }
url = "2.4.1"
sysinfo = "0.29.11"
thiserror = "1.0.56"
clap_complete = "4.3.2"
anyhow = "1.0.79"
comfy-table = "7.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
duct = "0.13.7"
test-log = "0.2.14"

[build-dependencies]
embed-resource = "1.8.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3

[target.'cfg(windows)'.dependencies]
csv = "1.2.2"
junction = "1.0.0"

[features]
